tests/snapshots/sequence_render__nested_groups_snapshot.snap
---
source: tests/sequence_render.rs
expression: svg
---
<svg height="418" viewBox="0 0 317 418" width="317" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}@media (prefers-color-scheme:dark){text{fill:#e8e8e8}.bg{fill:#1e1e1e}.arrow,.class-line{stroke:#e8e8e8}.arrow-dashed,.class-line-dashed{stroke:#e8e8e8}.divider-line{stroke:#aaaaaa}}
</style>
<rect class="bg" fill="#ffffff" height="100%" width="100%"/>
<g>
<rect fill="none" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="20" y="20"/>
<text text-anchor="middle" x="80" y="44.5">
Alice
</text>
</g>
<g>
<rect fill="none" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="173.5" y="20"/>
<text text-anchor="middle" x="233.5" y="44.5">
Bob
</text>
</g>
<line class="lifeline" x1="80" x2="80" y1="60" y2="348"/>
<line class="lifeline" x1="233.5" x2="233.5" y1="60" y2="348"/>
<g>
<rect fill="none" height="136" stroke="#888" stroke-width="1.2" width="273.5" x="20" y="194"/>
<polygon fill="none" points="20,194 60,194 68,202 60,210 20,210" stroke="#888888" stroke-width="1.2"/>
<text font-size="11" font-weight="bold" x="28" y="206">
alt
</text>
<text font-size="12" x="76" y="206">
[success]
</text>
<line stroke="#888" stroke-dasharray="4,3" stroke-width="1" x1="20" x2="293.5" y1="262" y2="262"/>
<text font-size="12" font-weight="bold" x="28" y="275">
[timeout]
</text>
</g>
<g>
<rect fill="none" height="228" stroke="#888" stroke-width="1.2" width="273.5" x="20" y="110"/>
<polygon fill="none" points="20,110 68,110 76,118 68,126 20,126" stroke="#888888" stroke-width="1.2"/>
<text font-size="11" font-weight="bold" x="28" y="122">
loop
</text>
<text font-size="12" x="84" y="122">
[until connected]
</text>
</g>
<g>
<line class="arrow" marker-end="url(#arrowhead)" x1="80" x2="233.5" y1="70" y2="70"/>
<text text-anchor="middle" x="156.75" y="65">
connect
</text>
</g>
<g>
<path class="arrow" d="M 233.5 138 L 287 138 L 287 158 L 233.5 158" marker-end="url(#arrowhead)"/>
<text text-anchor="middle" x="260.25" y="133">
retry
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="233.5" x2="80" y1="222" y2="222"/>
<text text-anchor="middle" x="156.75" y="217">
200 OK
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="233.5" x2="80" y1="282" y2="282"/>
<text text-anchor="middle" x="156.75" y="277">
504
</text>
</g>
<g>
<rect fill="none" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="20" y="348"/>
<text text-anchor="middle" x="80" y="372.5">
Alice
</text>
</g>
<g>
<rect fill="none" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="173.5" y="348"/>
<text text-anchor="middle" x="233.5" y="372.5">
Bob
</text>
</g>
</svg>
