tests/snapshots/sequence_render__note_over_snapshot.snap
---
source: tests/sequence_render.rs
assertion_line: 115
expression: svg
---
<svg height="286" viewBox="0 0 310 286" width="310" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.bg{fill:#ffffff}
</style>
<rect fill="#ffffff" height="100%" width="100%"/>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="20" y="20"/>
<text text-anchor="middle" x="80" y="44.5">
Alice
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="170" y="20"/>
<text text-anchor="middle" x="230" y="44.5">
Bob
</text>
</g>
<line class="lifeline" x1="80" x2="80" y1="60" y2="216"/>
<line class="lifeline" x1="230" x2="230" y1="60" y2="216"/>
<g>
<line class="arrow" marker-end="url(#arrowhead)" x1="80" x2="230" y1="70" y2="70"/>
<text text-anchor="middle" x="155" y="65">
begin
</text>
</g>
<g>
<polygon class="note-box" points="-16.25,110 166.25,110 176.25,120 176.25,156 -16.25,156"/>
<polyline fill="none" points="166.25,110 166.25,120 176.25,120" stroke="#bbbb00" stroke-width="1"/>
<text x="-10.25" y="126">
  Shared state flows
</text>
<text x="-10.25" y="143">
  through this exchange
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="230" x2="80" y1="166" y2="166"/>
<text text-anchor="middle" x="155" y="161">
ack
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="20" y="216"/>
<text text-anchor="middle" x="80" y="240.5">
Alice
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="170" y="216"/>
<text text-anchor="middle" x="230" y="240.5">
Bob
</text>
</g>
</svg>
