tests/snapshots/sequence_render__participants_snapshot.snap
---
source: tests/sequence_render.rs
expression: svg
---
<svg height="420" viewBox="0 0 910 420" width="910" xmlns="http://www.w3.org/2000/svg">
<defs>
<marker id="arrowhead" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<polygon fill="#181818" points="0 0, 10 5, 0 10"/>
</marker>
<marker id="arrowhead-open" markerHeight="10" markerWidth="10" orient="auto" refX="9" refY="5">
<path d="M0,0 L10,5 L0,10" fill="none" stroke="#181818" stroke-width="1.5"/>
</marker>
</defs>
<style>
text{font-family:"Liberation Sans",Helvetica,Arial,sans-serif;font-size:13px;fill:#181818}.participant-box{fill:#dae8fc;stroke:#6c8ebf;stroke-width:1.5}.lifeline{stroke:#6c8ebf;stroke-width:1;stroke-dasharray:6,4}.activation{fill:#cce0ff;stroke:#6c8ebf;stroke-width:1}.arrow{stroke:#181818;stroke-width:1.5;fill:none}.arrow-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}.note-box{fill:#ffffc0;stroke:#bbbb00;stroke-width:1}.divider-line{stroke:#888;stroke-width:1.5;stroke-dasharray:8,3}.divider-label{font-weight:bold}.title{font-size:15px;font-weight:bold}.class-line{stroke:#181818;stroke-width:1.5;fill:none}.class-line-dashed{stroke:#181818;stroke-width:1.5;fill:none;stroke-dasharray:6,3}
</style>
<rect fill="#ffffff" height="100%" width="100%"/>
<text class="title" text-anchor="middle" x="455" y="25">
Participant Types
</text>
<g>
<circle cx="80" cy="60" fill="#dae8fc" r="8" stroke="#6c8ebf" stroke-width="1.5"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="80" y1="68" y2="80"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="68" x2="92" y1="72.8" y2="72.8"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="70" y1="80" y2="90"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="90" y1="80" y2="90"/>
<text text-anchor="middle" x="80" y="103">
User
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="170" y="50"/>
<text text-anchor="middle" x="230" y="74.5">
Server
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="320" y="50"/>
<text text-anchor="middle" x="380" y="74.5">
Frontend
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="470" y="50"/>
<text text-anchor="middle" x="530" y="74.5">
Controller
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="620" y="50"/>
<text text-anchor="middle" x="680" y="74.5">
UserRecord
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="770" y="50"/>
<text text-anchor="middle" x="830" y="74.5">
PostgreSQL
</text>
</g>
<line class="lifeline" x1="80" x2="80" y1="90" y2="350"/>
<line class="lifeline" x1="230" x2="230" y1="90" y2="350"/>
<line class="lifeline" x1="380" x2="380" y1="90" y2="350"/>
<line class="lifeline" x1="530" x2="530" y1="90" y2="350"/>
<line class="lifeline" x1="680" x2="680" y1="90" y2="350"/>
<line class="lifeline" x1="830" x2="830" y1="90" y2="350"/>
<g>
<line class="arrow" marker-end="url(#arrowhead)" x1="80" x2="380" y1="100" y2="100"/>
<text text-anchor="middle" x="230" y="95">
submit form
</text>
</g>
<g>
<line class="arrow" marker-end="url(#arrowhead)" x1="380" x2="530" y1="140" y2="140"/>
<text text-anchor="middle" x="455" y="135">
POST /register
</text>
</g>
<g>
<line class="arrow" marker-end="url(#arrowhead)" x1="530" x2="830" y1="180" y2="180"/>
<text text-anchor="middle" x="680" y="175">
INSERT user
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="830" x2="530" y1="220" y2="220"/>
<text text-anchor="middle" x="680" y="215">
ok
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="530" x2="380" y1="260" y2="260"/>
<text text-anchor="middle" x="455" y="255">
201 Created
</text>
</g>
<g>
<line class="arrow-dashed" marker-end="url(#arrowhead)" x1="380" x2="80" y1="300" y2="300"/>
<text text-anchor="middle" x="230" y="295">
Success page
</text>
</g>
<g>
<circle cx="80" cy="360" fill="#dae8fc" r="8" stroke="#6c8ebf" stroke-width="1.5"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="80" y1="368" y2="380"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="68" x2="92" y1="372.8" y2="372.8"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="70" y1="380" y2="390"/>
<line stroke="#6c8ebf" stroke-width="1.5" x1="80" x2="90" y1="380" y2="390"/>
<text text-anchor="middle" x="80" y="403">
User
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="170" y="350"/>
<text text-anchor="middle" x="230" y="374.5">
Server
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="320" y="350"/>
<text text-anchor="middle" x="380" y="374.5">
Frontend
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="470" y="350"/>
<text text-anchor="middle" x="530" y="374.5">
Controller
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="620" y="350"/>
<text text-anchor="middle" x="680" y="374.5">
UserRecord
</text>
</g>
<g>
<rect fill="#dae8fc" height="40" rx="4" stroke="#6c8ebf" stroke-width="1.5" width="120" x="770" y="350"/>
<text text-anchor="middle" x="830" y="374.5">
PostgreSQL
</text>
</g>
</svg>
